--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@unhead/vue": "1.11.14",
 		"firebase": "^11.3.0",
 		"pinia": "2.3.0",
+		"vite-plugin-pwa": "^0.21.1",
 		"vue": "3.5.13",
 		"vue-router": "4.5.0"
 	},
