--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"pinia": "2.3.0",
 		"vite-plugin-pwa": "^0.21.1",
 		"vue": "3.5.13",
-		"vue-router": "4.5.0"
+		"vue-router": "4.5.0",
+		"vuedraggable": "^4.1.0"
 	},
 	"devDependencies": {
 		"@egoist/tailwindcss-icons": "1.8.1",
